<resources>
    <string name="app_name">Foodie</string>
    <string name="ActivityMainTitle">Foodie</string>
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_catagory">优惠</string>
    <string name="main_navigation_car">我的预定</string>
    <string name="main_code_buy">我的</string>
    <string name="main_navigation_more">更多</string>
    <string name="app_close">关闭应用程序</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_ok">确 定</string>
    <string name="cart_item_hint">您还没有预定美食!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_location">我的位置</string>
  <string-array name="search_array">
        <item>红豆</item>
        <item>黄豆</item>
        <item>豆腐</item>
        <item>红烧肉</item>
    </string-array>
    <string name="qqappwall_ready_to_download">请稍候,准备下载</string>
    <string name="qqappwall_unknown_app">神秘应用</string>
    <string name="qqappwall_downloading">正在下载</string>
    <string name="qqappwall_download_failed">下载失败，点击重试</string>
    <string name="qqappwall_download_failed_imply">下载失败</string>
    <string name="qqappwall_download_finished">下载完成，点击安装</string>
    <string name="qqappwall_download_finished_imply">下载完成</string>
    <string name="qqappwall_install_success">安装成功</string>
    <string name="qqappwall_app_name"></string>
    <string name="qqappwall_task_exist">已在下载任务中</string>
    <string name="qqappwall_task_cancel">已取消所有下载任务</string>
    <string name="type">选菜</string>
    <string name="favorites">添加收藏</string>
    <string name="cancel_favorites">取消收藏</string>
    <string name="favoritestable">收藏夹</string>
    <string name="home">首页</string>
    <string name="history">历史</string>
    <string name="more">更多</string>
    <string name="nomore">没有更多</string>
    <string name="querybuttom">搜索菜谱</string>
    <string name="searchfavorite">收藏夹</string>
    <string name="searchhistory">历史记录</string>
    <string name="tip">搜索类型:</string>
    <string name="load">点击查看更多</string>
    <string name="search">搜索:</string>
    <string name="good">赞</string>
    <string name="bad">烂</string>
    <string name="discussion">评论</string>
    <string name="recipe_discussion">评论：</string>
    <string name="save">收藏</string>
    <string name="share">分享</string>
    <string name="favorite_search">收藏夹</string>
    <string name="pre">上一篇</string>
    <string name="next">下一篇</string>
    <string name="delete">删除</string>
    <string name="history_search">历史搜索:</string>
    <string name="back">返回</string>
    <string name="refresh">刷新</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于我们</string>
    <string name="related">相关：</string>
    <string name="submit">提交</string>
    <string name="typesearch">分类查询:</string>
    <string name="lastcontent">最新菜谱</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="recsoftware">推荐软件</string>
    <string name="subject">没有帐号？快速注册</string>
    <string name="nopassword">忘记密码？</string>
    <string name="nopasswordtitle">忘记密码</string>
    <string name="hadread">我已阅读并同意</string>
    <string name="privacy">《用户协议》</string>
    <string name="community">厨友汇</string>
    <string name="square">最新</string>
    <string name="ecooker">厨友</string>
    <string name="post">发表</string>
    <string name="please">请选择</string>
    <string name="select_recpice">智能选菜，让生活更舒服</string>
    <string name="select_recpice_title">智能选菜</string>
    <string name="follow">关注</string>
    <string name="preferential">聚优惠</string>
    <string name="preferential_detail">优惠详情</string>
    <string name="get_preferential">领暗号</string>
    <string name="preferential_cypher">购买暗号：</string>
    <string name="preferential_cypher_user">暗号使用流程：</string>
    <string name="fans">粉丝</string>
    <string name="message">消息</string>
    <string name="mysend">我发表的</string>
    <string name="personal_settings">个人资料</string>
    <string name="setting">设置</string>
    <string name="please_setting">请设置</string>
    <string name="resetpassword">重设密码</string>
    <string name="sina_Authorize">新浪微博用户授权</string>
    <string name="qq_Authorize">腾迅帐号用户授权</string>
    <string name="loading">加载中.....</string>
    <string name="loaded">加载完成</string>
    <string name="atme">提到我</string>
    <string name="create_recipe">创建菜谱</string>
    <string name="material">材料：</string>
    <string name="practice">做法：</string>
    <string name="tips">小贴士：</string>
    <string name="mine">我的</string>
    <string name="topic">话题</string>
    <string name="recipe">菜谱</string>
    <string name="hot">热门</string>
    <string name="ecooker_do">厨友动手：</string>
    <string name="cooking_mode">进入烹饪模式</string>
    <string name="close">关闭</string>
    <string name="food_tool">手机淘宝-食材与工具</string>
    <string name="food">食材</string>
    <string name="tool">工具</string>
    <string name="snacks">零食</string>
    <string name="finished">成品</string>
    <string name="profile">个人资料</string>
    <string name="add_follow">添加关注</string>
    <string name="del_follow">取消关注</string>
    <string name="ta_like">TA喜欢的</string>
    <string name="user_recipes">私房菜</string>
    <string name="ta_collection">菜谱收藏</string>
    <string name="private_message">私信</string>
    <string name="select_topic">选择话题</string>
    <string name="input_text">输入</string>
    <string name="weekly">周刊</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="yes_c">是</string>
    <string name="no">否</string>
    <string name="all">全部</string>
    <string name="press_speak">按住 说话</string>
    <string name="voice_warning">录音时间太短</string>
    <string name="audio_title_name">语音</string>
    <string name="audio_playlist_name">我的录音</string>
    <string name="listen">试听</string>
    <string name="basic_map">基本地图</string>
    <string name="basic_description">介绍如何创建一个基本地图</string>
    <string name="camera_demo">Camera功能</string>
    <string name="camera_description">介绍在地图中操作Camera各种功能</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">AMapsV2  Demos</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="events_demo">Events功能</string>
    <string name="events_description">介绍对地图的点击，长按，拖动地图事件功能</string>
    <string name="fill_stroke">Fill Stroke</string>
    <string name="fill_color">Fill Color</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="hybrid">Hybrid</string>
    <string name="location">正在定位中</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>
    <string name="layers_demo">Layers图层功能</string>
    <string name="layers_description">介绍地图分别以正常、卫星模式展示出</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationsource_demo">Location小蓝点功能</string>
    <string name="locationsource_description">介绍对系统定位显示小蓝点功能</string>
    <string name="locationGPS_demo">gps定位功能</string>
    <string name="locationGPS_description">介绍如何使用gps定位</string>
    <string name="locationNetwork_description">介绍如何使用网络定位</string>
    <string name="locationNetwork_demo">网络定位功能</string>
    <string name="marker_demo">Markers功能</string>
    <string name="marker_description">介绍在地图上添加marker和infoWindow</string>
    <string name="mapOption_demo">AMapOptions实现地图</string>
    <string name="mapOption_description">介绍用AMapOptions展示一个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">移动camera</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="polygon_demo">Polygons功能</string>
    <string name="polygon_description">介绍在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能</string>
    <string name="polyline_description">介绍在地图中绘制线条</string>
    <string name="groundoverlay_demo">GroundOverlay功能</string>
    <string name="groundoverlay_description">介绍在地图中绘制GroundOverlay功能</string>
    <string name="circle_demo">Circles功能</string>
    <string name="circle_description">介绍在地图中绘制圆形</string>
    <string name="screenshot_demo">地图截屏功能</string>
    <string name="screenshot_description">介绍对地图进行截屏</string>
    <string name="properties_polyline">设置Polyline属性</string>
    <string name="properties_polygon">设置Polygon属性</string>
    <string name="properties_circle">设置Circle属性</string>
    <string name="busline_demo">Busline公交查询</string>
    <string name="busline_description">介绍如何在地图中绘制BusLine</string>
    <string name="route_demo">Route路径规划</string>
    <string name="route_description">介绍如何在地图中绘制Route</string>
    <string name="rotate">旋转手势</string>
    <string name="reset_map">Reset</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">滑动手势</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="terrain">Terrain</string>
    <string name="tilt">倾斜手势</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="opengl_demo">Opengl接口功能</string>
    <string name="opengl_description">介绍地图中开放Opengl接口功能</string>
    <string name="uisettings_demo">UI Settings功能</string>
    <string name="uisettings_description">介绍地图中UI Settings功能</string>
    <string name="geocoder_demo">地理编码 功能</string>
    <string name="geocoder_description">介绍 geocoder地理编码 功能</string>
    <string name="poikeywordsearch_demo">poi关键字搜索</string>
    <string name="poikeywordsearch_description">介绍poi关键字搜索功能</string>
    <string name="poiaroundsearch_demo">poi周边搜索</string>
    <string name="poiaroundsearch_description">介绍poi周边搜索功能</string>
    <string name="offlinemap_demo">离线地图功能</string>
    <string name="offlinemap_description">介绍如何使用离线地图</string>
    <string name="search_title">搜索关键字</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_buttons">缩放按钮</string>
    <string name="zoom_gestures">缩放手势</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="scale">比例尺</string>
    <string name="buttonScale">获取比例尺</string>
    <string name="beijing">"北京"</string>
    <string name="start">"开始"</string>
    <string name="pause">"暂停"</string>
    <string name="stop">"停止"</string>
    <string name="remove">"删除"</string>
    <string name="update">"更新"</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试！</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="send">发送</string>
    <string name="i_want_say">我要评论</string>
    <string name="guang_kc">逛 厨房</string>
    <string name="guang_tool">逛 工具</string>
    <string name="guang_food">逛 食材</string>
    <string name="guang_snacks">逛 零食</string>
    <string name="goods_detail">宝贝详情</string>
    <string name="buy">立即购买</string>
    <string name="recipe_share">上传我做的</string>
    <string name="add_list">加入清单</string>
    <string name="favnum_end">人收藏</string>
    <string name="had_work">动手做过这菜</string>
</resources>