<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    tools:context=".FoodContentActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/chose_bg"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/common_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="精选菜谱"
            android:textColor="#FFF8DC"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eeeeee" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/detail_top_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="horizontal"
                >

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/food_content_top_image"
                    android:layout_width="match_parent"
                    android:layout_height="280dp"
                    android:background="#eeeeee"
                    android:scaleType="fitXY" >
                </com.android.volley.toolbox.NetworkImageView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/add_separateline"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/comment_user_name"
                        style="@style/Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/recipe_share"
                        android:gravity="center"
                        android:text="@string/share" />

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/recipe_upload"
                        android:gravity="center"
                        android:text="@string/recipe_share" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/add_list"
                        android:gravity="center"
                        android:text="@string/add_list" />

                    <TextView
                        android:id="@+id/collect_click"
                        style="@style/Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:drawableTop="@drawable/favorites"
                        android:gravity="center"
                        android:text="@string/favorites" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/food_content_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/favnum_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="532"
                        android:textColor="#FF7F00" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/favnum_number"
                        android:text="@string/favnum_end" />

                    <TextView
                        android:id="@+id/create_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="2014-5-14" />

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/favnum_number"
                        android:background="@drawable/content_button"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp" >

                        <com.android.volley.toolbox.NetworkImageView
                            android:id="@+id/comment_user_image"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:scaleType="fitXY" />

                        <TextView
                            android:id="@+id/upload_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/count_gone_view"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_below="@+id/favnum_number"
                        android:background="@drawable/content_button"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp" >

                        <TextView
                            android:id="@+id/favnum_number_text"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/button_round_o"
                            android:gravity="center"
                            android:scaleType="centerInside"
                            android:textColor="#ffffff" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/had_work" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/content_line"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/material"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/custom_material_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/content_line"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/practice"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/custom_practice_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <TextView
                    android:id="@+id/tips_if_gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/content_line"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/tips"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/custom_tips_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/comments_if_gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#eeeeee"
                    android:paddingTop="10dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/content_line"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:text="@string/recipe_discussion"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/food_content_comment_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/navbar_btncube"
                        android:drawableLeft="@drawable/icon_comment"
                        android:gravity="center"
                        android:text="全部4条评论" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/custom_comments_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>